--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/inter": "^5.0.16",
+        "@mui/icons-material": "^5.15.2",
+        "@mui/joy": "^5.0.0-beta.20",
+        "@mui/material": "^5.15.2",
+        "formik": "^2.4.5",
+        "yup": "^1.3.3"
     }
 }
