--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@mui/joy": "^5.0.0-beta.20",
         "@mui/material": "^5.15.2",
         "formik": "^2.4.5",
+        "react-hot-toast": "^2.4.1",
         "yup": "^1.3.3"
     }
 }
