--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
         "@mui/joy": "^5.0.0-beta.20",
         "@mui/material": "^5.15.2",
         "formik": "^2.4.5",
+        "lodash": "^4.17.21",
         "react-hot-toast": "^2.4.1",
+        "slugify": "^1.6.6",
+        "sweetalert2": "^11.10.1",
         "yup": "^1.3.3"
     }
 }
